WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134080
WKContentViewInteraction isn't cleaned up when the Web Content process crashes
https://bugs.webkit.org/show_bug.cgi?id=134080
Summary
WKContentViewInteraction isn't cleaned up when the Web Content process crashes
Tim Horton
Reported
2014-06-19 16:14:09 PDT
This can lead to a number of weird things, like smart magnification breaking, the file upload popup getting stuck open, the keyboard and highlight views staying up for too long, etc.
Attachments
patch
(4.41 KB, patch)
2014-06-19 18:19 PDT
,
Tim Horton
benjamin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-06-19 18:19:27 PDT
Created
attachment 233399
[details]
patch
Tim Horton
Comment 2
2014-06-20 00:31:58 PDT
http://trac.webkit.org/changeset/170178
Radar WebKit Bug Importer
Comment 3
2014-06-23 03:01:13 PDT
<
rdar://problem/17416497
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug